:tada: new committed code

--- a/NumPy Tutorial.ipynb
+++ b/NumPy Tutorial.ipynb
@@ -1,6 +1,643 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Load in NumPy (pip numpy first)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# The Basics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.array([1,2,3], dtype='int32')\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[9.  2.3 7. ]\n",
+      " [5.  4.  3.7]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "b = np.array([[9.0,2.3,7.0],[5.0,4.0,3.7]])\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get Dimension\n",
+    "a.ndim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3,)\n",
+      "(2, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get shape\n",
+    "print(a.shape)\n",
+    "print(b.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('int32')"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get Type\n",
+    "a.dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get Size\n",
+    "a.itemsize"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n",
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get total size\n",
+    "print(a.size * a.itemsize)\n",
+    "print(a.nbytes)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Accessing/Chaningin specific elements, rows, columns etc."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  2  3  4  5  6  7]\n",
+      " [ 8  9 10 11 12 13 14]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.array([[1,2,3,4,5,6,7],[8,9,10,11,12,13,14]])\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get a specific element [r,c]\n",
+    "a[1,5]\n",
+    "a[1,-2] # also negative, backwards"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3, 4, 5, 6, 7])"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get a specific row\n",
+    "a[0, :]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 3, 10])"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get a specific column \n",
+    "a[:,2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2, 4, 6])"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Getting a little mor fancy [startindex:endindex:stepsize]\n",
+    "a[0, 1:6:2]\n",
+    "a[0, 1:-1:2] # fancier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  2  5  4  5  6  7]\n",
+      " [ 8  9  5 11 12 20 14]]\n",
+      "[[ 1  2  5  4  5  6  7]\n",
+      " [ 8  9  5 11 12 20 14]]\n",
+      "[[ 1  2  5  4  5  6  1]\n",
+      " [ 8  9  5 11 12 20  2]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Change a value\n",
+    "a[1,5] = 20\n",
+    "print(a)\n",
+    "\n",
+    "a[:,2] = 5\n",
+    "print(a)\n",
+    "\n",
+    "a[:,6] = 1,2\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*3D example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1 2]\n",
+      "  [3 4]]\n",
+      "\n",
+      " [[5 6]\n",
+      "  [7 8]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "b = np.array([[[1,2],[3,4]],[[5,6],[7,8]]])\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "[[3 4]\n",
+      " [7 8]]\n",
+      "[[1 2]\n",
+      " [5 6]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get specific element (work outside in)\n",
+    "print(b[0,1,1])\n",
+    "print(b[:,1,:])\n",
+    "print(b[:,0,:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[1, 2],\n",
+       "        [9, 9]],\n",
+       "\n",
+       "       [[5, 6],\n",
+       "        [8, 8]]])"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# replace\n",
+    "b[:,1,:] = [[9,9],[8,8]]\n",
+    "b"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Initialize Different Types of Arrays"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0., 0.],\n",
+       "       [0., 0., 0.]])"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# All zeroes matrix\n",
+    "np.zeros((2,3)) # specify the shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[1, 1],\n",
+       "        [1, 1]],\n",
+       "\n",
+       "       [[1, 1],\n",
+       "        [1, 1]],\n",
+       "\n",
+       "       [[1, 1],\n",
+       "        [1, 1]],\n",
+       "\n",
+       "       [[1, 1],\n",
+       "        [1, 1]]])"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# All one's matrix (with a specific datatype [voluntary])\n",
+    "np.ones((4,2,2), dtype='int32')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[99., 99.],\n",
+       "       [99., 99.]], dtype=float32)"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Any other number (with a specific datatype [voluntary])\n",
+    "np.full((2,2), 99, dtype=\"float32\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Array creation routines: https://docs.scipy.org/doc/numpy/reference/routines.array-creation.html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[4, 4, 4, 4, 4, 4, 4],\n",
+       "       [4, 4, 4, 4, 4, 4, 4]])"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Any other number (full_like) as the same shape as another array\n",
+    "np.full_like(a, 4)\n",
+    "# or\n",
+    "np.full(a.shape, 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.42911637, 0.16272182],\n",
+       "       [0.27254313, 0.8410106 ],\n",
+       "       [0.94626944, 0.12543614],\n",
+       "       [0.30347024, 0.706361  ]])"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Random decimal numbers\n",
+    "np.random.rand(4,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.51266904, 0.7592422 , 0.95317866, 0.01443532, 0.19724772,\n",
+       "        0.81814625, 0.07140652],\n",
+       "       [0.09789906, 0.71733002, 0.07855548, 0.19466818, 0.77434081,\n",
+       "        0.89553862, 0.15128218]])"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# in a specific shape\n",
+    "np.random.random_sample(a.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 4 0]\n",
+      " [2 1 6]\n",
+      " [2 4 0]]\n",
+      "[[ 3 16  7 31  4 18 15]\n",
+      " [18 21 23  6 18 18  9]\n",
+      " [20 21 26 18  2 23 26]\n",
+      " [30 13 23  1 18 32 21]\n",
+      " [14  3 34 33  1 33 35]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Random Integer values\n",
+    "# specify start value; no value - starts at zero\n",
+    "#end value is not included (exlusive)\n",
+    "print(np.random.randint(7, size=(3,3)))\n",
+    "print(np.random.randint(1,36, size=(5,7)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0., 0., 0., 0.],\n",
+       "       [0., 1., 0., 0., 0.],\n",
+       "       [0., 0., 1., 0., 0.],\n",
+       "       [0., 0., 0., 1., 0.],\n",
+       "       [0., 0., 0., 0., 1.]])"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.identity(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [1 2 3]\n",
+      " [1 2 3]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.array([[1,2,3]])\n",
+    "r1 = np.repeat(arr,3, axis=0)\n",
+    "print(r1)"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.6"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 4
 }
